--- a/uikit/index.html
+++ b/uikit/index.html
@@ -8,7 +8,8 @@
   </head>
 
   <body>
-    <h1>UI KIT</h1>   
+    <h1>UI KIT</h1>  
+    <button type="button" class="btn">your button</button>
   </body>
 
 </html>
