--- a/uikit/index.html
+++ b/uikit/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>UI KIT</h1>  
     <button type="button" class="btn">your button</button>
+    <div class="alert">Alert box</div>
   </body>
 
 </html>
