--- a/uikit/index.html
+++ b/uikit/index.html
@@ -11,6 +11,13 @@
     <h1>UI KIT</h1>  
     <button type="button" class="btn">your button</button>
     <div class="alert">Alert box</div>
+    <ul class="list-group">
+        <li class="list-group-item">First item</li>
+        <li class="list-group-item">Second item</li>
+        <li class="list-group-item">Third item</li>
+        <li class="list-group-item">Fourth item</li>
+        <li class="list-group-item">Fifth item</li>
+    </ul>
   </body>
 
 </html>
