--- a/uikit/index.html
+++ b/uikit/index.html
@@ -31,6 +31,14 @@
         <a href="#" class="btn">Go to...</a>
       </div>
     </div>
+
+    <ul class="navbar">
+      <li class="navbar-item">Title 1</li>
+      <li class="navbar-item">Title 2</li>
+      <li class="navbar-item">Title 3</li>
+      <li class="navbar-item">Title 4</li>
+    </ul>
+
   </body>
 
 </html>
