--- a/uikit/index.html
+++ b/uikit/index.html
@@ -39,6 +39,35 @@
       <li class="navbar-item">Title 4</li>
     </ul>
 
+    <ul id="chessboard-test" class="first-line">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul id="chessboard-test" class="second-line">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul id="chessboard-test" class="third-line">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
+    <ul id="chessboard"></ul>
+
   </body>
+
+  <script src="script.js"></script>
 
 </html>
