--- a/uikit/index.html
+++ b/uikit/index.html
@@ -39,7 +39,9 @@
       <li class="navbar-item">Title 4</li>
     </ul>
 
-    <ul id="chessboard-test" class="first-line">
+<hr>
+<h3>Damier HTML/Flexbox</h3>
+    <ul class="chessboard-test first-line">
       <li></li>
       <li></li>
       <li></li>
@@ -47,7 +49,7 @@
       <li></li>
       <li></li>
     </ul>
-    <ul id="chessboard-test" class="second-line">
+    <ul class="chessboard-test second-line">
       <li></li>
       <li></li>
       <li></li>
@@ -55,15 +57,17 @@
       <li></li>
       <li></li>
     </ul>
-    <ul id="chessboard-test" class="third-line">
+    <ul class="chessboard-test third-line">
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
-    </ul>
-
+    </ul>   
+ 
+    <hr>
+<h3>Damier JS/Flexbox</h3>
     <ul id="chessboard"></ul>
 
   </body>
