--- a/uikit/index.html
+++ b/uikit/index.html
@@ -41,15 +41,9 @@
 
 <hr>
 <h3>Damier HTML/Flexbox</h3>
-    <ul class="chessboard-test first-line">
+    <ul class="chessboard-html first-line">
       <li></li>
       <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <ul class="chessboard-test second-line">
       <li></li>
       <li></li>
       <li></li>
@@ -57,19 +51,80 @@
       <li></li>
       <li></li>
     </ul>
-    <ul class="chessboard-test third-line">
+    <ul class="chessboard-html second-line">
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
-    </ul>   
+      <li></li>
+      <li></li>
+    </ul>
+    <ul class="chessboard-html third-line">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul> 
+    <ul class="chessboard-html fourth-line">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>  
  
     <hr>
-<h3>Damier JS/Flexbox</h3>
-    <ul id="chessboard"></ul>
+    <h3>Damier JS/Flexbox</h3>
+    <ul id="chessboard-js"></ul>
 
+    <hr>
+    <h3>Damier CSS Grid</h3>
+    <div id="chessboard-grid">
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+      <div class="chessboard-grid-items"></div>
+    </div>
   </body>
 
   <script src="script.js"></script>
